Fri Dec 19 01:19:36 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * ace/UUID.cpp:

          Bug fix where assigning a NIL UUID resulted in an execution
          of an obselete ACE_ASSERT statement.

Wed Dec 17 08:35:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          2804 doesn't run yet

Tue Dec 16 15:40:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx-neutrino.h:
        * ace/config-qnx-rtp-62x.h:
        * ace/config-qnx-rtp-pre62x.h:
        * ace/config-tandem-nsk-mips-v2.h:
        * ace/config-tandem-nsk-mips-v3.h:
        * ace/Pipe.cpp:
        * performance-tests/TCP/tcp_test.cpp:
          Reworked ACE_LACKS_SOCKET_BUFSIZ into ACE_LACKS_SO_RCVBUF
          and ACE_LACKS_SO_SNDBUF so that each of them could be
          independently enabled/disabled. Updated a few config files
          for this.

Tue Dec 16 11:04:00 UTC 2008  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Added #define ACE_HAS_VASPRINTF.

Mon Dec 15 18:24:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled 3499 again

Mon Dec 15 13:38:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled bidir tests for wince/fuzz/labview

Mon Dec 15 09:15:54 UTC 2008  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
        * ace/ACE.inl:
          Added wchar_t variant of ACE::isdotdir(). Thanks to Johnny
          for pointing this out.

Sat Dec 13 18:25:15 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * bin/tao_other_tests.lst:
          Accidently turned on a future test. Reverting the same.

Fri Dec 12 19:23219 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Disabled ICMG_Any_Bug for CORBA/e

Fri Dec 12 13:26:19 UTC 2008  Olli Savia  <ops@iki.fi>

        * NEWS:
          Added a note about ACE::isdotdir().
